# dotfiles2

./: .bumpversion.toml  .envrc  .gitmodules  .ignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
.github/workflows/: pull-request.yaml  push.yaml
configs/1password/: install.sh
configs/age/: install.sh
configs/agg/: install.sh
configs/asciinema/: install.sh  set-up.sh  shell.fish
configs/bacon/: install.sh
configs/bash/: bashrc  set-up.sh
configs/bat/: install.sh  set-up.sh  shell.fish
configs/batwatch/: set-up.sh  shell.fish
configs/bottom/: bottom.toml  install.sh  set-up.sh  shell.fish
configs/bump-my-version/: install.sh  set-up.sh  shell.fish
configs/curl/: install.sh  set-up.sh  shell.fish
configs/db-browser-for-sqlite/: install.sh
configs/delta/: install.sh
configs/direnv/: direnv.fish  direnv.sh  direnv.toml  install.sh  set-up.sh  shell.fish  shell.sh
configs/dnsmasq/: install.sh
configs/dropbox/: install.sh
configs/dust/: install.sh
configs/eza/: install.sh  set-up.sh  shell.fish
configs/fd/: install.sh  set-up.sh  shell.fish
configs/fish/: install.sh  set-up.sh  shell.fish
configs/fzf/: fzf.fish  fzf.sh  set-up.sh  shell.fish  shell.sh
configs/ggrep/: install.sh
configs/gh/: install.sh
configs/ghostty/: config  install.sh  set-up-manual.sh  set-up.sh  shell.fish
configs/git/: config  ignore  install.sh  set-up.sh  shell.fish
configs/gitweb/: install.sh
deploy-key/: key.pub
scripts/: .envrc  create-vm.sh  old-script.py  rh-macbook.py  script.py  set-up-vm.sh  set-up.sh  setup-uv.sh
(+181 files in other folders)
