[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = [
    "dycw-utilities[test]>=0.179.1, <1",
    "pyright>=1.1.408, <2",
    "rich>=14.2.0, <15",
  ]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = ["click>=8.3.1, <9", "dycw-utilities>=0.179.1, <1"]
  description = "My dotfiles"
  name = "dotfiles"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.1.1"

[tool.uv.build-backend]
  module-name = "dotfiles"
  module-root = "src"
